# arithma

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  KNUTH-PLAN.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml  nightly.yml  (+1 more)
docs/: agent-integration.md  result-status.md
examples/: beam-stress.json  gum-beam-uncertainty.md  gum_report.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/: algebraic.rs  assumptions.rs  chain.rs  composition.rs  derivative.rs  environment.rs  evaluator.rs  exact.rs  expression.rs  ext_poly.rs  fps.rs  function_meta.rs  functions.rs  inequality.rs  integer.rs  integration.rs  lib.rs  limits.rs  main.rs  matrix.rs  mod_poly.rs  multipoly.rs  node.rs  ode.rs  parser.rs  partial_fractions.rs  polynomial.rs  rational_function.rs  risch.rs  series.rs  simplify.rs  simplify_literal.rs  special_functions.rs  status.rs  substitute.rs  systems.rs  tokenizer.rs  verify.rs  wasm_bindings.rs
tests/: algebra.rs  arithmetic.rs  assumptions.rs  calculus.rs  chain.rs  composition.rs  derivative.rs  edge_cases.rs  functions.rs  idempotency.rs  inequality.rs  integration.rs  inverse_trig.rs  latex.rs  limits_bounded.rs  math_json.rs  matrix.rs  matrix_basic.rs  matrix_cdot_test.rs  parser_hardening.rs  partial_fraction_integration.rs  simplify.rs  simplify_fraction_cancel.rs  simplify_rational.rs  special_functions.rs  status.rs  substitute.rs  summation.rs  trig_powers.rs  trig_substitution.rs  u_substitution.rs  verify.rs
(+102 files in other folders)
