[package]
name = "arithma"
version = "0.1.0"
edition = "2021"

[lib]
name = "arithma"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Feature flags can be added here as needed
[features]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.5.0"
regex = "1.9.5"
